--- a/CSS/style.css
+++ b/CSS/style.css
@@ -106,5 +106,40 @@ span {
     width: 100%;
 }
 
+.about {
+    background-color: var(--bg-color-02);
+}
+
+.home-content h1, .about-content h1 {
+    font-weight: 700;
+    line-height: 1.3;
+
+
+    font-size: 1.6rem; 
+}
+
+.home-content h3, .about-content h3 {
+    font-weight: 700;
+    font-size: 1.6rem;
+}
+
+.home-content p, .about-content p {
+    margin-top: 1.2rem;
+    text-align: justify;
+
+}
+
+.services h2,
+.portfolio h2,
+.contact h2 {
+    font-size: 2.2 rem;
+    margin-bottom: 1rem;
+    text-align: center;
+}
+
+.services-container {
+    
+}
+
 
 
