--- a/CSS/style.css
+++ b/CSS/style.css
@@ -184,3 +184,53 @@ span {
     overflow: hidden;
     text-overflow: ellipsis;
 }
+
+.portfolio {
+    background-color: var(--bg-color-02);
+}
+
+.portfolio-container {
+    display: grid;
+    gap: 1.2rem;
+}
+
+.portfolio-box {
+    position: relative;
+    border-radius: 0.6rem;
+    box-shadow: 0 0 0.6rem var(--bg-color-01);
+    overflow: hidden;
+    display: flex;
+}
+
+.portfolio-box-img {
+    width: 100%;
+    transition: 0.5s ease;
+}
+
+
+
+
+/* ===== button ===== */
+.btn {
+    display: inline-block;
+    padding: 0.7rem 1.8rem;
+    background-color: var(--main-color);
+    border-radius: 2rem;
+    color: var(--bg-color-02);
+    font-weight: 600;
+    letter-spacing: 0.1rem;
+    transition: 0.3s ease;
+    margin-top: 1.2rem;
+}
+
+.btn:hover {
+    box-shadow: 0 0 0.3rem;
+    background-color: inherit;
+    color: var(--main-color);
+    cursor: pointer;
+}
+
+/* ===== /button ===== */
+
+
+
