--- a/CSS/style.css
+++ b/CSS/style.css
@@ -260,8 +260,32 @@ form {
     margin: 0.6rem auto;
     text-align: center;
     margin-bottom: 2rem;
+}
 
-    border: solid 1px var(--color-03);
+form .input-box {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap; 
+}
+
+form .input-box input,
+form textarea {
+    width: 100%;
+    padding: 1rem;
+    font-size: 1rem;
+    color: var(--text-color);
+    background-color: var(--bg-color-02);
+    border-radius: 0.5rem;
+    margin: 0.4rem 0;
+}
+
+form textarea {
+    resize: none;
+}
+
+footer {
+    display: flex;
+    flex-direction: row;
 }
 
 
