--- a/CSS/style.css
+++ b/CSS/style.css
@@ -341,3 +341,20 @@ footer {
 
 
 
+/* ===== menu hamburguer ===== */
+.menu-hamburguer {
+    display: none;
+    cursor: pointer;
+}
+
+.bar1, .bar2, .bar3 {
+    width: 2rem;
+    height: 0.3rem;
+    background-color: var(--text-color);
+    margin: 0.4rem 0; 
+}
+
+/* ===== /menu hamburguer ===== */
+
+
+
