--- a/CSS/style.css
+++ b/CSS/style.css
@@ -352,9 +352,187 @@ footer {
     height: 0.3rem;
     background-color: var(--text-color);
     margin: 0.4rem 0; 
+    transition: 0.3s ease;
+}
+
+.change .bar1 {
+    transform: translate(0, 0.65rem) rotate(-45deg);
+}
+.change .bar2 {
+    opacity: 0;
+}
+.change .bar3 {
+    transform: translate(0, -0.65rem) rotate(45deg);
 }
 
 /* ===== /menu hamburguer ===== */
+
+/* ===== media queries ===== */
+
+/* Extra Small(xs): Smartphone (portrait) */
+@media (min-width: 0px) {
+    .menu-hamburguer {
+        display: block;
+    }
+
+    .nav {
+        display: none;
+    }
+
+    .nav-responsive{
+        display: block;
+        font-size: 1.2rem;
+        margin: 0.5rem 0;
+    }
+
+    section {
+        padding: 6rem 2.5rem;
+    }
+
+    .home, .about {
+        flex-direction: column;
+        gap: 1.2rem;
+    }
+
+    .home-img, .about-img {
+        width: 80%;
+        max-width: 80%;
+    }
+
+    .home-content, .about-content {
+        width: 100%;
+    }
+
+    .home-content div {
+        text-align: center;
+    }
+
+    .home-content h1,  .about-content h1 {
+        font-size: 2.2rem;
+        font-weight: 700;
+        line-height: 1.3;
+    }
+
+    .services-container {
+        flex-direction: column;
+        align-items: center;
+    }
+    
+    .services-box {
+        width: 100%;
+    }
+
+    header {
+        background-color: var(--color-01); 
+    }
+}
+
+/* Small (sm): Smartphone (Landscape) */
+@media (min-width: 576px) {
+    .home-img, .about-img{
+        width: 65%;
+        max-width: 65%;
+    }
+
+    .services-box {
+        width: 70%;
+    }
+
+
+    header {
+        background-color: var(--color-02); 
+    }
+
+}
+
+/* Medium (md) (Tablet) */
+@media (min-width: 768px) {
+    .menu-hamburguer {
+        display: none;
+    }
+
+    .nav {
+        display: block;
+    }
+
+    .nav-responsive, .nav-responsive a {
+        display: none;
+    }
+    .home, .about {
+        flex-direction: row;
+        justify-content: space-evenly;
+    }
+
+    .home-img, .about-img {
+        max-width: 35%;
+    }
+    .home-content, .about-content {
+        width: 60%;
+        margin-bottom: 2rem;
+    }
+
+    .services-box {
+        width: 70%;
+    }
+
+    .portfolio-container {
+        grid-template-columns: auto auto;
+    }
+
+    form .input-box input {
+        width: 49%;
+    }
+
+    header {
+        background-color: var(--color-03); 
+    }
+
+}
+
+/* Large (lg) Notebook */
+@media (min-width: 992px){ 
+    
+    /* .home-img, .about-img {
+        max-width: 35%;
+    } */
+
+    .services-container {
+        flex-direction: row;
+        gap: 1.2rem;
+    }
+        
+
+    header {
+        background-color: var(--color-04); 
+    }
+
+}
+
+/* Extra Large (xl) Desktop */
+@media (min-width: 1200px) {
+    .home-img, .about-img {
+        max-width: 25%;
+    }
+
+    .home-content h1 {
+        font-size: 2.7rem;
+    }
+
+    .home-content h3 {
+        font-size: 2rem;
+    }
+
+    .portfolio-container {
+        grid-template-columns: auto auto auto;
+    }
+
+    header {
+        background-color: var(--color-05); 
+    }
+
+}
+
+/* ===== /media queries ===== */
 
 
 
