--- a/CSS/style.css
+++ b/CSS/style.css
@@ -60,16 +60,26 @@ header {
     cursor: default;
 }
 
-.nav a {
+.nav-responsive {
+    display: none;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    padding: 1rem;
+    background-color: var(--bg-color-01);
+}
+
+.nav a, .nav-responsive a {
     font-size: 1.2rem;
     color: var(--text-color);
     padding: 0.5rem 1rem;
     transition: 0.4s;
 
-    border: solid 1px var(--color-02)
+    /* border: solid 1px var(--color-02) TEST */
 }
 
-.nav a :hover{
+.nav a:hover, .nav-responsive a:hover {
     color: var(--main-color);  
 }
 
@@ -77,7 +87,7 @@ section {
     min-height: 100vh;
     padding: 6rem 6rem 2rem;
 
-    border: solid 1px var(--color-02)
+    /* border: solid 1px var(--color-02) */
 }
 
 span {
@@ -379,7 +389,7 @@ footer {
         display: none;
     }
 
-    .nav-responsive{
+    .nav-responsive a {
         display: block;
         font-size: 1.2rem;
         margin: 0.5rem 0;
