--- a/CSS/style.css
+++ b/CSS/style.css
@@ -50,7 +50,7 @@ header {
     align-items: center;
     z-index: 100;
 
-    border: solid 1px var(--color-02); 
+    /* border: solid 1px var(--color-02); TEST */
 }
 
 .logo {
@@ -58,6 +58,9 @@ header {
     color: var(--text-color);
     font-weight: 600;
     cursor: default;
+}
+.nav a:hover {
+    color: var(--main-color)
 }
 
 .nav-responsive {
