--- a/CSS/style.css
+++ b/CSS/style.css
@@ -127,12 +127,16 @@ span {
     background-color: var(--bg-color-02);
 }
 
+.home-content, .about-content {
+    width: 45%;
+}
+
 .home-content h1, .about-content h1 {
     font-weight: 700;
     line-height: 1.3;
 
 
-    font-size: 1.6rem; 
+    font-size: 2.7rem; /*TEST*/
 }
 
 .home-content h3, .about-content h3 {
@@ -160,14 +164,6 @@ span {
     justify-content: space-evenly;
 }
 
-.services-box {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    min-height: 25rem;
-    margin-bottom: 1rem;
-}
-
 .services-container .services-box {
     padding: 2rem 1rem 2.5rem;
     border-radius: 1.2rem;
@@ -176,6 +172,16 @@ span {
     background-color: var(--bg-color-02);
     transition: 0.5s ease;
 }
+
+.services-box {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    min-height: 25rem;
+    margin-bottom: 1rem;
+}
+
+
 
 .services-container .services-box:hover {
     border-color: var(--main-color);
